--- a/project.html
+++ b/project.html
@@ -84,6 +84,47 @@
                         <a href="https://github.com/Brijeshkumar16/Fusion" target="_blank">Source Code</a>
                     </div>
                 </div>
+                <div class="project-detail">
+                    <div class="img">
+                        <img src="img/work4.png" alt="Images">
+                        <a href="https://brijeshkumar16.github.io/Hielo/" target="_blank"><i class="fas fa-home"></i></a>
+                    </div>
+                    <div class="project-info">
+                        <h2>Project Hielo</h2>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Bootstrap</span>
+                        <br>
+                        <a href="https://github.com/Brijeshkumar16/Hielo" target="_blank">Source Code</a>
+                    </div>
+                </div>
+                <div class="project-detail">
+                    <div class="img">
+                        <img src="img/work5.png" alt="Images">
+                        <a href="https://brijeshkumar16.github.io/Megacorp/" target="_blank"><i class="fas fa-home"></i></a>
+                    </div>
+                    <div class="project-info">
+                        <h2>Project Megacorp</h2>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Bootstrap</span>
+                        <br>
+                        <a href="https://github.com/Brijeshkumar16/Megacorp" target="_blank">Source Code</a>
+                    </div>
+                </div>
+                <div class="project-detail">
+                    <div class="img">
+                        <img src="img/work6.png" alt="Images">
+                        <a href="https://brijeshkumar16.github.io/Urban/" target="_blank"><i class="fas fa-home"></i></a>
+                    </div>
+                    <div class="project-info">
+                        <h2>Project Urban</h2>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <br>
+                        <a href="https://github.com/Brijeshkumar16/Urban" target="_blank">Source Code</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
