--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a href="project.html">
                     <img src="img/work2.png" alt="Image">
                     <div class="hover">
-                        <h2>Project <br>Hielo</h2>
+                        <h2>Project <br>Theory</h2>
                     </div>
                 </a>
             </div>
@@ -102,6 +102,14 @@
                     <img src="img/work3.png" alt="Image">
                     <div class="hover">
                         <h2>Project <br>Fusion</h2>
+                    </div>
+                </a>
+            </div>
+            <div class="work-info">
+                <a href="project.html">
+                    <img src="img/work4.png" alt="Image">
+                    <div class="hover">
+                        <h2>Project <br>Hielo</h2>
                     </div>
                 </a>
             </div>
