--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ===== TITLE ===== -->
     <title>Brijesh Yadav || Home</title>
 
@@ -45,11 +45,12 @@
                 <div class="icon">
                     <a href="https://www.linkedin.com/in/brijeshkumar-yadav-1527b21b8/" target="_blank"><i
                             class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/Brijeshkumar16" target="_blank"> <i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Brijeshkumar16" target="_blank">
+                        <i class="fab fa-github"></i></a>
                 </div>
             </div>
             <div class="hero-right">
-                <img src="img/Brijesh2.png" alt="Image">
+                <img src="img/Brijesh2.png" alt="Image" />
             </div>
         </div>
     </section>
@@ -58,16 +59,17 @@
     <section class="about fix-width">
         <div class="flex">
             <div class="about-left">
-                <img src="img/Brijesh1.png" alt="Image">
+                <img src="img/Brijesh1.png" alt="Image" />
             </div>
             <div class="about-right">
                 <h1>About</h1>
                 <div class="border"></div>
                 <p>
-                    Hi , <br>
-                    I am responsible for implementing visual elements that users see and interact with in a web
-                    application. They are usually supported by back-end web developers, who are responsible for
-                    server-side application logic and integration of the work I can do.
+                    Hi , <br />
+                    I am responsible for implementing visual elements that users see and
+                    interact with in a web application. They are usually supported by
+                    back-end web developers, who are responsible for server-side
+                    application logic and integration of the work I can do.
                 </p>
                 <a href="about.html">ABOUT ME</a>
             </div>
@@ -83,33 +85,36 @@
         <div class="flex">
             <div class="work-info">
                 <a href="project.html">
-                    <img src="img/work1.png" alt="Image">
+                    <img src="img/work1.png" alt="Image" />
                     <div class="hover">
-                        <h2>Project <br> Backroads</h2>
+                        <h2>
+                            Project <br />
+                            Backroads
+                        </h2>
                     </div>
                 </a>
             </div>
             <div class="work-info">
                 <a href="project.html">
-                    <img src="img/work2.png" alt="Image">
+                    <img src="img/work2.png" alt="Image" />
                     <div class="hover">
-                        <h2>Project <br>Theory</h2>
+                        <h2>Project <br />Theory</h2>
                     </div>
                 </a>
             </div>
             <div class="work-info">
                 <a href="project.html">
-                    <img src="img/work3.png" alt="Image">
+                    <img src="img/work3.png" alt="Image" />
                     <div class="hover">
-                        <h2>Project <br>Fusion</h2>
+                        <h2>Project <br />Fusion</h2>
                     </div>
                 </a>
             </div>
             <div class="work-info">
                 <a href="project.html">
-                    <img src="img/work4.png" alt="Image">
+                    <img src="img/work4.png" alt="Image" />
                     <div class="hover">
-                        <h2>Project <br>Hielo</h2>
+                        <h2>Project <br />Hielo</h2>
                     </div>
                 </a>
             </div>
@@ -128,7 +133,7 @@
                 <div class="skill-info html">
                     <div class="text">
                         <h3>HTML</h3>
-                        <P>80%</P>
+                        <p>80%</p>
                     </div>
                     <div class="skill-container">
                         <div class="skill-value"></div>
@@ -137,7 +142,7 @@
                 <div class="skill-info css">
                     <div class="text">
                         <h3>CSS</h3>
-                        <P>75%</P>
+                        <p>75%</p>
                     </div>
                     <div class="skill-container">
                         <div class="skill-value"></div>
@@ -146,7 +151,7 @@
                 <div class="skill-info bootstrap">
                     <div class="text">
                         <h3>Bootstrap</h3>
-                        <P>80%</P>
+                        <p>80%</p>
                     </div>
                     <div class="skill-container">
                         <div class="skill-value"></div>
@@ -155,7 +160,7 @@
                 <div class="skill-info js">
                     <div class="text">
                         <h3>Javascript</h3>
-                        <P>50%</P>
+                        <p>50%</p>
                     </div>
                     <div class="skill-container">
                         <div class="skill-value"></div>
@@ -171,7 +176,8 @@
             <div class="footer-icon">
                 <a href="https://www.linkedin.com/in/brijeshkumar-yadav-1527b21b8/" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/Brijeshkumar16" target="_blank"> <i class="fab fa-github"></i></a>
+                <a href="https://github.com/Brijeshkumar16" target="_blank">
+                    <i class="fab fa-github"></i></a>
             </div>
             <div class="footer-copyright">
                 <p>© 2021 Brijesh Yadav. All Rights Reserved</p>
