--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <!-- ===== LOADER START ===== -->
+    <div class="loader">
+        <img src="img/loader.gif" alt="img">
+    </div>
+    
     <!-- ===== NAV START ===== -->
     <nav class="full-width">
         <div class="nav-center fix-width">
