--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <!-- ===== LOADER START ===== -->
+    <div class="loader">
+        <img src="img/loader.gif" alt="img">
+    </div>
+
     <!-- ===== NAV START ===== -->
     <nav class="full-width">
         <div class="nav-center fix-width">
@@ -41,9 +46,12 @@
                 <h1>Contact</h1>
                 <div class="border"></div>
             </div>
-            <div class="info">     
-                <p>If you are looking to hire  me, you can send me an email at <a href="mailto:by8832866@gmail.com">by8832866@gmail.com</a></p>
-                <p>You can also reach me on linkedin at <a href="https://www.linkedin.com/in/brijeshkumar-yadav-1527b21b8/" target="_blank">Brijeshkumar Yadav</a> </p>
+            <div class="info">
+                <p>If you are looking to hire me, you can send me an email at <a
+                        href="mailto:by8832866@gmail.com">by8832866@gmail.com</a></p>
+                <p>You can also reach me on linkedin at <a
+                        href="https://www.linkedin.com/in/brijeshkumar-yadav-1527b21b8/" target="_blank">Brijeshkumar
+                        Yadav</a> </p>
             </div>
         </div>
     </section>
