--- a/project.html
+++ b/project.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <!-- ===== LOADER START ===== -->
+    <div class="loader">
+        <img src="img/loader.gif" alt="img">
+    </div>
+    
     <!-- ===== NAV START ===== -->
     <nav class="full-width">
         <div class="nav-center fix-width">
@@ -45,7 +50,8 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work1.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Backroads/" target="_blank"><i class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Backroads/" target="_blank"><i
+                                class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
                         <h2>Project Backroads</h2>
@@ -59,7 +65,8 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work2.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Theory/" target="_blank"><i class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Theory/" target="_blank"><i
+                                class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
                         <h2>Project Theory</h2>
@@ -73,7 +80,8 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work3.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Fusion/" target="_blank"><i class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Fusion/" target="_blank"><i
+                                class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
                         <h2>Project Fusion</h2>
@@ -87,7 +95,8 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work4.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Hielo/" target="_blank"><i class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Hielo/" target="_blank"><i
+                                class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
                         <h2>Project Hielo</h2>
@@ -101,7 +110,8 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work5.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Megacorp/" target="_blank"><i class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Megacorp/" target="_blank"><i
+                                class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
                         <h2>Project Megacorp</h2>
@@ -115,7 +125,8 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work6.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Urban/" target="_blank"><i class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Urban/" target="_blank"><i
+                                class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
                         <h2>Project Urban</h2>
