--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <!-- ===== LOADER START ===== -->
+    <div class="loader">
+        <img src="img/loader.gif" alt="img">
+    </div>
+    
     <!-- ===== NAV START ===== -->
     <nav class="full-width">
         <div class="nav-center fix-width">
@@ -41,9 +46,10 @@
                 <h1>About Me</h1>
                 <div class="border"></div>
             </div>
-            <div class="info">     
+            <div class="info">
                 <p>
-                    Hello, I am Brijesh Yadav and I am a Frontend Web Developer. I live in Valsad, Gujarat. I spend most of
+                    Hello, I am Brijesh Yadav and I am a Frontend Web Developer. I live in Valsad, Gujarat. I spend most
+                    of
                     my day, experimenting with HTML, CSS and JavaScript. I enjoy coding and the challenge of learning
                     something new everyday.
                 </p>
