--- a/project.html
+++ b/project.html
@@ -100,9 +100,9 @@
                     </div>
                     <div class="project-info">
                         <h2>Project Hielo</h2>
+                        <span>Bootstrap</span>
                         <span>HTML</span>
                         <span>CSS</span>
-                        <span>Bootstrap</span>
                         <br>
                         <a href="https://github.com/Brijeshkumar16/Hielo" target="_blank">Source Code</a>
                     </div>
@@ -115,9 +115,9 @@
                     </div>
                     <div class="project-info">
                         <h2>Project Megacorp</h2>
+                        <span>Bootstrap</span>
                         <span>HTML</span>
                         <span>CSS</span>
-                        <span>Bootstrap</span>
                         <br>
                         <a href="https://github.com/Brijeshkumar16/Megacorp" target="_blank">Source Code</a>
                     </div>
@@ -125,15 +125,16 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work6.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Urban/" target="_blank"><i
+                        <a href="https://brijeshkumar16.github.io/Projection/" target="_blank"><i
                                 class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Urban</h2>
+                        <h2>Project Projection</h2>
+                        <span>Bootstrap</span>
                         <span>HTML</span>
                         <span>CSS</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Urban" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Projection" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
