--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="loader">
         <img src="img/loader.gif" alt="img">
     </div>
-    
+
     <!-- ===== NAV START ===== -->
     <nav class="full-width">
         <div class="nav-center fix-width">
@@ -48,10 +48,9 @@
             </div>
             <div class="info">
                 <p>
-                    Hello, I am Brijesh Yadav and I am a Frontend Web Developer. I live in Valsad, Gujarat. I spend most
-                    of
-                    my day, experimenting with HTML, CSS and JavaScript. I enjoy coding and the challenge of learning
-                    something new everyday.
+                    Hello, I am Brijesh Yadav and I am a Frontend Web Developer. I live in Valsad, Gujarat. <br>
+                    I spend most of my day, experimenting with HTML, CSS and JavaScript. <br>
+                    I enjoy coding and the challenge of learning something new everyday.
                 </p>
             </div>
         </div>
