--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="hero-left">
                 <div class="border"></div>
                 <h1>I'm Brijesh</h1>
-                <p>Learning Frontend Web Development</p>
+                <p>Junior Frontend Web Development</p>
                 <a href="contact.html" class="btn">HIRE ME</a>
                 <div class="icon">
                     <a href="https://www.linkedin.com/in/brijeshkumar-yadav-1527b21b8/" target="_blank"><i
@@ -71,9 +71,9 @@
                 <div class="border"></div>
                 <p>
                     Hi , <br />
-                    I am responsible for implementing visual elements that users see and
-                    interact with in a web application. They are usually supported by
-                    back-end web developers, who are responsible for server-side
+                    I am responsible for implementing visual elements that users see and 
+                    interact with in a web application. They are usually supported by 
+                    back-end web developers, who are responsible for server-side 
                     application logic and integration of the work I can do.
                 </p>
                 <a href="about.html">ABOUT ME</a>
@@ -94,7 +94,7 @@
                     <div class="hover">
                         <h2>
                             Project <br />
-                            Backroads
+                            Vanilla
                         </h2>
                     </div>
                 </a>
@@ -103,7 +103,8 @@
                 <a href="project.html">
                     <img src="img/work2.png" alt="Image" />
                     <div class="hover">
-                        <h2>Project <br />Theory</h2>
+                        <h2>Project <br />
+                            Evolo</h2>
                     </div>
                 </a>
             </div>
@@ -130,47 +131,14 @@
     <section class="skill full-width">
         <div class="fix-width">
             <div class="skill-header">
-                <h1>Skills</h1>
+                <h1>Frontend Web Development Skills :)</h1>
                 <div class="border"></div>
             </div>
-            <div class="skill-front">
-                <h2>Front end</h2>
-                <div class="skill-info html">
-                    <div class="text">
-                        <h3>HTML</h3>
-                        <p>80%</p>
-                    </div>
-                    <div class="skill-container">
-                        <div class="skill-value"></div>
-                    </div>
-                </div>
-                <div class="skill-info css">
-                    <div class="text">
-                        <h3>CSS</h3>
-                        <p>75%</p>
-                    </div>
-                    <div class="skill-container">
-                        <div class="skill-value"></div>
-                    </div>
-                </div>
-                <div class="skill-info bootstrap">
-                    <div class="text">
-                        <h3>Bootstrap</h3>
-                        <p>80%</p>
-                    </div>
-                    <div class="skill-container">
-                        <div class="skill-value"></div>
-                    </div>
-                </div>
-                <div class="skill-info js">
-                    <div class="text">
-                        <h3>Javascript</h3>
-                        <p>50%</p>
-                    </div>
-                    <div class="skill-container">
-                        <div class="skill-value"></div>
-                    </div>
-                </div>
+            <div class="skill-btn">
+                <button>HTML5</button>
+                <button>CSS3</button>
+                <button>Bootstrap4</button>
+                <button>Basic Javascript</button>
             </div>
         </div>
     </section>
