--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
     <div class="loader">
         <img src="img/loader.gif" alt="img">
     </div>
-    
+
     <!-- ===== NAV START ===== -->
     <nav class="full-width">
         <div class="nav-center fix-width">
@@ -50,91 +50,90 @@
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work1.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Backroads/" target="_blank"><i
+                        <a href="https://brijeshkumar16.github.io/Vanilla/" target="_blank"><i
                                 class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Backroads</h2>
+                        <h2>Project Vanilla</h2>
                         <span>HTML-5</span>
                         <span>CSS-3</span>
                         <span>Javascript</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Backroads" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Vanilla" target="_blank">Source Code</a>
                     </div>
                 </div>
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work2.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Theory/" target="_blank"><i
+                        <a href="https://brijeshkumar16.github.io/Evolo/" target="_blank"><i
                                 class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Theory</h2>
+                        <h2>Project Evolo</h2>
                         <span>HTML-5</span>
                         <span>CSS-3</span>
                         <span>Javascript</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Theory" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Evolo" target="_blank">Source Code</a>
                     </div>
                 </div>
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work3.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Fusion/" target="_blank"><i
-                                class="fas fa-home"></i></a>
+                        <a href="https://brijeshkumar16.github.io/Flat/" target="_blank"><i class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Fusion</h2>
+                        <h2>Project Flat</h2>
                         <span>HTML-5</span>
                         <span>CSS-3</span>
                         <span>Javascript</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Fusion" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Flat" target="_blank">Source Code</a>
                     </div>
                 </div>
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work4.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Hielo/" target="_blank"><i
+                        <a href="https://brijeshkumar16.github.io/Producto/" target="_blank"><i
                                 class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Hielo</h2>
+                        <h2>Project Producto</h2>
                         <span>Bootstrap</span>
                         <span>HTML</span>
                         <span>CSS</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Hielo" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Producto" target="_blank">Source Code</a>
                     </div>
                 </div>
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work5.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Megacorp/" target="_blank"><i
+                        <a href="https://brijeshkumar16.github.io/Softy/" target="_blank"><i
                                 class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Megacorp</h2>
+                        <h2>Project Softy</h2>
                         <span>Bootstrap</span>
                         <span>HTML</span>
                         <span>CSS</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Megacorp" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Softy" target="_blank">Source Code</a>
                     </div>
                 </div>
                 <div class="project-detail">
                     <div class="img">
                         <img src="img/work6.png" alt="Images">
-                        <a href="https://brijeshkumar16.github.io/Projection/" target="_blank"><i
+                        <a href="https://brijeshkumar16.github.io/Backroads/" target="_blank"><i
                                 class="fas fa-home"></i></a>
                     </div>
                     <div class="project-info">
-                        <h2>Project Projection</h2>
+                        <h2>Project Backroads</h2>
                         <span>Bootstrap</span>
                         <span>HTML</span>
                         <span>CSS</span>
                         <br>
-                        <a href="https://github.com/Brijeshkumar16/Projection" target="_blank">Source Code</a>
+                        <a href="https://github.com/Brijeshkumar16/Backroads" target="_blank">Source Code</a>
                     </div>
                 </div>
             </div>
