--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <div class="skill-btn">
                 <button>HTML5</button>
                 <button>CSS3</button>
-                <button>Bootstrap4</button>
-                <button>Basic Javascript</button>
+                <button>Bootstrap</button>
+                <button>Javascript</button>
             </div>
         </div>
     </section>
