--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="hero-left">
                 <div class="border"></div>
                 <h1>I'm Brijesh</h1>
-                <p>Junior Frontend Web Development</p>
+                <p>Junior Frontend Web Developer</p>
                 <a href="contact.html" class="btn">HIRE ME</a>
                 <div class="icon">
                     <a href="https://www.linkedin.com/in/brijeshkumar-yadav-1527b21b8/" target="_blank"><i
