--- a/project.html
+++ b/project.html
@@ -70,9 +70,9 @@
                     </div>
                     <div class="project-info">
                         <h2>Project Evolo</h2>
+                        <span>Bootstrap</span>
                         <span>HTML-5</span>
                         <span>CSS-3</span>
-                        <span>Javascript</span>
                         <br>
                         <a href="https://github.com/Brijeshkumar16/Evolo" target="_blank">Source Code</a>
                     </div>
@@ -100,8 +100,8 @@
                     <div class="project-info">
                         <h2>Project Producto</h2>
                         <span>Bootstrap</span>
-                        <span>HTML</span>
-                        <span>CSS</span>
+                        <span>HTML5</span>
+                        <span>CSS3</span>
                         <br>
                         <a href="https://github.com/Brijeshkumar16/Producto" target="_blank">Source Code</a>
                     </div>
@@ -114,9 +114,9 @@
                     </div>
                     <div class="project-info">
                         <h2>Project Softy</h2>
-                        <span>Bootstrap</span>
-                        <span>HTML</span>
-                        <span>CSS</span>
+                        <span>HTML5</span>
+                        <span>CSS3</span>
+                        <span>Javascript</span>
                         <br>
                         <a href="https://github.com/Brijeshkumar16/Softy" target="_blank">Source Code</a>
                     </div>
@@ -129,9 +129,9 @@
                     </div>
                     <div class="project-info">
                         <h2>Project Backroads</h2>
-                        <span>Bootstrap</span>
-                        <span>HTML</span>
-                        <span>CSS</span>
+                        <span>HTML5</span>
+                        <span>CSS3</span>
+                        <span>Javascript</span>
                         <br>
                         <a href="https://github.com/Brijeshkumar16/Backroads" target="_blank">Source Code</a>
                     </div>
